Fixed header alignment on welcome page

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -3,6 +3,7 @@
 }
 .about-wrap header h1.edd-bk {
     font-size: 2.3em;
+    margin-left: 8px;
 }
 .about-wrap header h1.edd-bk span {
     font-size: 0.7em;
